update handler
